@@ -15,6 +15,8 @@ zookeeper.h (pat via mahadev)
 
    ZOOKEEPER-219. fix events.poll timeout in watcher test to be longer. (pat
 via mahadev)
+   
+   ZOOKEEPER-217. Fix errors in config to be thrown as Exceptions. (mahadev)
 
 Release 3.0.0 - 2008-10-21
 
